1. Fixed problem with annotation support 2. Fixed problem with missing variable names on XSTORE instructions 3. Added missing props 4. Removed unused class 5. Added non-optimized libraries with full debug info